# catsay-gtk-glade

./: Cargo.toml  README.md  gtk_debug.sh
src/: layout.glade  main.rs
