[package]
name = "catsay-gtk-glade"
version = "0.1.0"
authors = ["kyron5"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9"

[dependencies.gtk]
version = "0.9"
# By default this crate provides only GTK+ 3.14 APIs. You can access more modern APIs by selecting
# one of the following features: v3_14, v3_16, etc.
# Take care when choosing the version to target: some of your users might not have easy access
# to the latest ones. The higher the version, the fewer users will have it installed.
features = ["v3_24"]

#[dependencies.gio]
#version = ""
#features = ["2_68"] # ["v2_44"]
